# ofxDepthStream

./: .gitignore  .gitmodules  README.md  addon_config.mk  doxygen.cfg
docs/html/: _buffer_8h.html  _buffer_8h_source.html  _cam_interface_8cpp.html  _cam_interface_8h.html  _cam_interface_8h_source.html  _compressor_8cpp.html  _compressor_8h.html  _compressor_8h_source.html  _depth_stream_8h.html  _depth_stream_8h_source.html  _frame_8h.html  _frame_8h_source.html  _inflater_8cpp.html  _inflater_8h.html  _inflater_8h_source.html  _oni_sample_utilities_8cpp.html  _oni_sample_utilities_8h.html  _oni_sample_utilities_8h_source.html  _playback_8cpp.html  _playback_8h.html  _playback_8h_source.html  _receiver_8cpp.html  _receiver_8h.html  _receiver_8h_source.html  _recorder_8cpp.html  _recorder_8h.html  _recorder_8h_source.html  _transmitter_8cpp.html  _transmitter_8h.html  _transmitter_8h_source.html  _windowsstuff_8cpp.html  _windowsstuff_8h.html  _windowsstuff_8h_source.html  annotated.html  classdepth_1_1_buffer.html  classdepth_1_1_cam_interface.html  classdepth_1_1_compressor.html  classdepth_1_1_formatter.html  classdepth_1_1_frame.html  classdepth_1_1_inflater.html  (+42 more)
docs/html/search/: all_0.js  all_1.js  all_10.js  all_11.js  all_12.js  all_13.js  all_2.js  all_4.js  all_5.js  all_7.js  all_8.js  all_9.js  all_a.js  all_b.js  all_c.js  all_d.js  all_e.js  all_f.js  classes_0.js  classes_1.js  classes_2.js  classes_3.js  classes_4.js  classes_5.js  classes_6.js  classes_7.js  classes_8.js  classes_9.js  classes_a.js  files_1.js  (+47 more)
example-Client/: config.make
example-Client/example-Client.xcodeproj/: project.pbxproj
example-Client/src/: main.cpp  ofApp.cpp  ofApp.h
example-DualStream/: addons.make
example-DualStream/example-DualStream.xcodeproj/: project.pbxproj
example-DualStream/src/: main.cpp
example-EdgeData/: addons.make
example-EdgeData/src/: main.cpp
example-Mesh/: addons.make
example-Mesh/example-Mesh.xcodeproj/: project.pbxproj
example-Mesh/src/: main.cpp
example-PerseeClient/: addons.make
example-PerseeClient/src/: main.cpp
example-PerseeServer/: Makefile  builddev.sh
example-PerseeServer/src/: main.cpp
example-PerseeTransmitter/src/: main.cpp
example-Recorder/: .gitignore
example-Recorder/example-Recorder.xcodeproj/: project.pbxproj
example-Recorder/src/: main.cpp
src/ofxDepthStream/: functional.cpp  functional.h  ofxDepthStream.h
src/ofxOrbbecPersee/: Client.cpp  Client.h  ColorStream.cpp  ColorStream.h  DepthStream.cpp  DepthStream.h  ImageStream.cpp  ImageStream.h  StreamReceiver.h  functional.h  ofxOrbbecPersee.h
src/persee/: Buffer.h  CamInterface.cpp  CamInterface.h  Compressor.cpp  Compressor.h  Formatter.cpp  Formatter.h  Frame.h  Inflater.cpp  Inflater.h  OniSampleUtilities.cpp  Receiver.cpp  Receiver.h  Transmitter.cpp  Transmitter.h  config.h  functional.h  persee.h  protocol.h
tests/: addons.make
tests/src/: main.cpp
tools/AstraServer/: .gitignore  CMakeLists.txt  README.md  build_script_example.sh  key_handler.h  main.cpp
tools/AstraServer/cmake/: FindAstra.cmake
tools/AstraServer/src/: main.cpp
tools/KinectForWindows2/: .classpath  .gitignore  .project  README.md  build.gradle
tools/KinectServer/: .gitignore  build.gradle
tools/KinectServer-UNTESTED/: build.gradle
tools/KinectV2/: .classpath  .gitignore  .project  zadig_instructions.txt
tools/LeapMotionMac/: .gitignore  Makefile
tools/OrbbecAstraTransmitter/: .gitignore  CMakeLists.txt  README.md  build_script_example.sh
tools/OrbbecAstraTransmitter/src/: key_handler.h  main.cpp
tools/OrbbecAstraTransmitter/vs2015/: OrbbecAstraTransmitter.sln  OrbbecAstraTransmitter.vcxproj  OrbbecAstraTransmitter.vcxproj.filters
tools/OrbbecAstraTransmitter/vs2015/copy_to_bin64_dir/: OpenNI2.lib
tools/OrbbecAstraTransmitter/vs2015/cpp-api/DepthReaderEventCPP/: DepthReaderEventCPP.vcxproj  DepthReaderEventCPP.vcxproj.filters
tools/OrbbecAstraTransmitter/vs2015/include/astra/: Array.hpp  Matrix3x3.hpp  Vector2f.hpp  Vector2i.hpp  Vector3f.hpp  Vector3i.hpp  astra.hpp
tools/OrbbecAstraTransmitter/vs2015/include/astra/capi/: astra.h  astra_ctypes.h  astra_version.h
tools/OrbbecAstraTransmitter/vs2015/include/astra/capi/streams/: body_capi.h  body_parameters.h  body_types.h  color_capi.h  colorized_body_capi.h  depth_capi.h  hand_capi.h  image_capi.h  infrared_capi.h  masked_color_capi.h  point_capi.h  stream_types.h
tools/OrbbecAstraTransmitter/vs2015/include/astra/streams/: Color.hpp  DebugHand.hpp  Depth.hpp  Hand.hpp  Image.hpp  Infrared.hpp  MaskedColor.hpp
tools/OrbbecAstraTransmitter/vs2015/include/astra_core/: DataStream.hpp  Frame.hpp  FrameListener.hpp  StreamReader.hpp  StreamServiceProxy.hpp  StreamSet.hpp  astra_core.hpp
tools/OrbbecAstraTransmitter/vs2015/include/astra_core/capi/: astra_defines.h  astra_host_events.h  astra_types.h
tools/OrbbecAstraTransmitter/vs2015/include/astra_core/plugins/: PluginLogging.hpp  SingleBinStream.hpp  StreamBin.hpp
tools/OrbbecAstraTransmitter/vs2015/lib/: astra.lib  astra_core.lib  astra_core_api.lib
tools/OrbbecAstraTransmitter/vs2015/lib/Plugins/: openni_sensor.lib  orbbec_hand.lib  orbbec_xs.lib
tools/OrbbecAstraTransmitterForWindows/AstraSDK-v2.0.8-beta2-c1b800ad80-20180201T103942Z-vs2015-win64/samples/: CMakeLists.txt
tools/OrbbecAstraTransmitterForWindows/AstraSDK-v2.0.8-beta2-c1b800ad80-20180201T103942Z-vs2015-win64/samples/cpp-api/DepthReaderEventCPP/: main.cpp
tools/OrbbecAstraTransmitterForWindows/AstraSDK-v2.0.8-beta2-c1b800ad80-20180201T103942Z-vs2015-win64/samples/vs2015/: astra-samples.sln  ofxDepthStream-Astra.sln
tools/OrbbecAstraTransmitterForWindows/AstraSDK-v2.0.8-beta2-c1b800ad80-20180201T103942Z-vs2015-win64/samples/vs2015/cpp-api/DepthReaderEventCPP/: DepthReaderEventCPP.vcxproj  DepthReaderEventCPP.vcxproj.filters
tools/OrbbecPerseeTransmitter/: Makefile  README.md
tools/PerseeServer/: Makefile  README.md  builddev.sh
tools/RealSenseTransmitter/: .gitignore  CMakeLists.txt  README.md
tools/RealSenseTransmitter/src/: RealSenseTransmitter.cpp  example.hpp
(+112 files in other folders)
